force-app/main/default/objects/User_Unidad__c/fields/Intentos__c.field-meta.xml
<CustomField>
    <fullName>Intentos__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Intentos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>