force-app/main/default/objects/User_Unidad__c/listViews/Mis_Unidades.listView-meta.xml
<ListView>
    <fullName>Mis_Unidades</fullName>
    <columns>NAME</columns>
    <columns>Unidad__c</columns>
    <columns>User_Modulo__c</columns>
    <columns>Estados__c</columns>
    <columns>Intentos__c</columns>
    <columns>Puntos__c</columns>
    <columns>Tiempo_Estimado__c</columns>
    <filterScope>Mine</filterScope>
    <label>Mis Unidades</label>
</ListView>